@@ -63,6 +63,7 @@ v 8.5.0 (unreleased)
   - Fix CI builds badge, add a new link to builds badge, deprecate the old one
   - Fix broken link to project in build notification emails
   - Ability to see and sort on vote count from Issues and MR lists
+  - Fix builds scheduler when first build in stage was allowed to fail
 
 v 8.4.4
   - Update omniauth-saml gem to 1.4.2
